<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_login"
    tools:context="medisys.android.com.medisys.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/welcomeLabel"
        android:text="@string/welcome_txt"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/usernameLabel"
        android:layout_toEndOf="@+id/usernameLabel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/usernameLabel"
        android:text="@string/username_txt"
        android:layout_below="@+id/welcomeLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="57dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userName"
        android:hint="@string/username_hint_txt"
        android:layout_above="@+id/pswLabel"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pswLabel"
        android:text="@string/psw_txt"
        android:layout_below="@+id/usernameLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="42dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_btn_txt"
        android:id="@+id/loginBtn"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/welcomeLabel"
        android:layout_toEndOf="@+id/welcomeLabel" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:layout_alignBottom="@+id/pswLabel"
        android:layout_alignLeft="@+id/userName"
        android:layout_alignStart="@+id/userName"
        android:hint="@string/psw_hint_txt" />

</RelativeLayout>
